cluster/apps/technitium/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: technitium
    app.kubernetes.io/version: sha256_23d3b63d959e9
  name: technitium
spec:
  selector:
    app.kubernetes.io/name: technitium
  ports:
  - name: http-technitium
    port: 5380
    targetPort: 5380
